mychatappv4/src/main/java/com/example/mychatappv4/errors/DuplicateUsernameException.java
package com.example.mychatappv4.errors;

public class DuplicateUsernameException extends RuntimeException {
    public DuplicateUsernameException(String message) {
        super(message);
    }
}
